public/stylesheets/styles.css
*   {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html    {
    scroll-behavior: smooth;
}

:root {
    --info-box-color: #2b2929e5 ;
    --info-text-color:#e0e0e0;
}

body {
    margin: auto;
    background-image: url('../images/bgImg.jpeg');
    background-size: cover;
    background-position: 80%;
    background-attachment: fixed;
}

.landingMain {
    max-width: 950px;
    margin: auto;
    position: relative;
    min-height: 100vh;
    padding-bottom: 2.5rem;
}

.header {
    height: 75px;
}

.landingAbout {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: var(--info-text-color);
    min-height: 150px;
    width: 700px;
    background-color: var(--info-box-color);
    text-align: center;
}

.landingAbout img {
    max-width: 25%;
}

.aboutText {
    text-align: left;
}

.formContainer {
    max-width: 90%;
    margin: auto;
    background-color: rgba(250, 250, 250, 0.979);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    border-radius: 15px;
}
.signupDiv {
    min-height: 350px;
    border-right: 1px solid rgba(20, 20, 20, 0.644);
}

.loginDiv {
    min-height: 320px;
    border-left: 1px solid rgba(20, 20, 20, 0.644);
}

.logoLanding {
    text-align: center;
}

.logoLanding img {
    width: 80%;
}

.landingFooter {
    height: 100px;
    max-width: 900px;
    background-color: var(--info-box-color);
    border-radius: 15px 15px 0 0;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: var(--info-text-color);
    bottom: 0;
}

/* HOMEPAGE styling */

.home-news {
    min-height: 200px;
    background-color: var(--info-box-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #eee;
}

.news-card img {
    max-width: 50%;
}

.news-card div {
    max-width: 200px;
    font-size: 12px;
    color: #eee;
    background-color: var(--info-box-color);
    max-height: 400px;
    overflow: scroll;
}

.news-card li {
    background-color: var(--info-box-color);
}

.home-leaderboard {
    min-height: 200px;
    background-color: var(--info-box-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #eee;
}

.chatroom {
    min-height: 100%;
    background-color: var(--info-box-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #eee;
}

.chatbox {
    background-color: #474545ce;
}

/* USER DASHBOARD Styles */
.user-info {
    min-height: 150px;
    background-color: var(--info-box-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #eee;
}

.user-posts {
    min-height: 400px;
    background-color: var(--info-box-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #eee;
}

/* FORUM PAGE Styles */
.forum-div {
    min-height: 800px;
    background-color: var(--info-box-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #eee;
}

.dashboard-tab {
    min-height: 800px;
    background-color: var(--info-box-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #eee;
    text-align: center;
}

.tab-content {
    width: 100%;
}

.forum-tab {
    background-color: var(--info-box-color);
}


/* Media Queries */

@media screen and (max-width: 575px)  {
    .logoLanding img {
        width: 75%;
    }
}

